Updated Service classes